crates/eml_cli/tests/snapshots/integration__ui__run@data__string_literal_default_uses_the_value.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/string_literal_default_uses_the_value.em
---
--- stdout ---
A
b!
--- stderr ---
