crates/eml_cli/tests/snapshots/integration__ui__run@data__tree.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/tree.em
---
--- stdout ---
1;2;5;8;9;
1
--- stderr ---
