crates/eml_cli/tests/snapshots/integration__ui__run@data__tuples_with_effects.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/tuples_with_effects.em
---
--- stdout ---
left! right!
2
--- stderr ---
